--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,13 @@
     <string name="login_appTitle">Plants Thirsty Make Drink</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
-    <string name="textView_login_forgotPassword">Forgot Password?</string>
+    <string name="forgotPassword">Forgot Password?</string>
     <string name="login_login">Login</string>
     <string name="login_signUp">Sign up</string>
+    <string name="name">Name</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="confirm_password">Confirm Password</string>
+    <string name="submit">Submit</string>
+
 </resources>
